--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -9,6 +9,13 @@
     width: calc(100% - 200px);
 }
 
+.home {
+    justify-content: center;
+}
+.blogListing {
+    max-width: 700px;
+}
+
 @media screen and (max-width: 1000px) {
     .main {
         width: 100%;
@@ -22,5 +29,8 @@
     
     .middleBody {
         flex-direction: column-reverse;
+    }
+    .blogListing {
+        width: 100%;
     }
 }
