--- a/src/app/blog/components/blog/page.module.css
+++ b/src/app/blog/components/blog/page.module.css
@@ -66,6 +66,8 @@
     font-size: 20px;
     padding: 7px;
     border-radius: 10px;
+    max-width: 285px;
+    width: 80%;
 }
 
 @media screen and (max-width: 500px) {
