--- a/src/app/blog/components/page.module.css
+++ b/src/app/blog/components/page.module.css
@@ -39,10 +39,13 @@
     width: 15px;
     margin-right: 5px;
 }
-
-.activeNavLink, .navLink:hover {
+.navLink:hover {
     background-color: var(--app-light-background-color);
     color: var(--app-text-color);
+}
+.activeNavLink, .activeNavLink:hover {
+    background-color: var(--app-selected-background-color);
+    color: var(--app-selected-text-color);
 }
 
 @media screen and (max-width: 1000px) {
