--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,13 @@
 
   --app-background-color: white;
   --app-light-background-color: hsl(0, 4%, 86%);
+  --app-selected-background-color: hsl(206, 93%, 52%);
+
   --app-text-color: black;
   --app-light-text-color: hsl(15, 2%, 51%);
-  --app-button-padding: 7px;
+  --app-selected-text-color: white;
 
+  --app-button-padding: 7px;
   --app-header-height: 50px;
 
   --app-navbar-status-translate: -100%;
