--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -7,6 +7,7 @@
 .main {
     height: 100%;
     width: calc(100% - 200px);
+    --app-main-body-background-color: var(--app-background-color);
 }
 
 @media screen and (max-width: 1000px) {
