--- a/src/app/blog/organization/create/components/page.module.css
+++ b/src/app/blog/organization/create/components/page.module.css
@@ -1,13 +1,16 @@
 
 .organizationCreationContainer {
-    justify-content: space-between;
+    align-items: center;
+}
+
+.organizationCreationForm, .organizationCreationNavbar {
+    max-width: 700px;
+    width: 100%;
     align-items: center;
 }
 
 .organizationCreationForm {
-    max-width: 500px;
-    width: 100%;
-    align-items: center;
+    margin-bottom: 20px;
 }
 
 .organizationCreationForm > label, .organizationCreationForm input, .organizationCreationForm textarea {
@@ -15,10 +18,20 @@
 }
 
 .organizationCreationNavbar {
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
-.organizationCreationNavbar > .button {
+.organizationCreationNavbar > button {
     color: var(--app-selected-text-color);
     background-color: var(--app-selected-background-color);
+    font-size: 18px;
+}
+
+@media screen and (max-width: 500px) {
+    .organizationCreationForm {
+        margin-bottom: 0px;
+    }
+    .organizationCreationContainer {
+        justify-content: space-between;
+    }
 }
