--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -1,4 +1,6 @@
-
+.body {
+    justify-content: space-between;
+}
 .middleBody {
     justify-content: space-between;
     height: calc(100% - var(--app-header-height));
@@ -20,9 +22,14 @@
 }
 
 @media screen and (max-width: 500px) {
+
+    .main {
+        height: calc(100% - 40px);
+    }
     
     .middleBody {
         flex-direction: column-reverse;
+        height: calc(100% - var(--app-header-height));
     }
     .blogListing {
         width: 100%;
