--- a/src/app/blog/components/blog/page.module.css
+++ b/src/app/blog/components/blog/page.module.css
@@ -70,6 +70,11 @@
     width: 80%;
 }
 
+
+.userListContainer {
+    justify-content: space-between;
+}
+
 @media screen and (max-width: 500px) {
     
     .blogMeta {
