--- a/src/app/blog/organization/create/components/page.module.css
+++ b/src/app/blog/organization/create/components/page.module.css
@@ -27,6 +27,42 @@
     font-size: 18px;
 }
 
+
+.userAddingSection {
+    max-width: 700px;
+    width: 100%;
+    align-items: center;
+    max-height: 450px;
+    height: 100%;
+}
+
+.userAddingForm {
+    width: 80%;
+    height: 100%;
+}
+
+.addedUserPreview {
+    width: 20%;
+    height: 100%;
+    min-width: 250px;
+    border: 1px solid;
+
+}
+
+@media screen and (max-width: 710px) {
+    .userAddingSection {
+        flex-direction: column;
+    }
+    .addedUserPreview {
+        width: 100%;
+        height: 40px;
+    }
+    .userAddingForm {
+        width: 100%;
+        height: calc(100% - 40px);
+    }
+}
+
 @media screen and (max-width: 500px) {
     .organizationCreationForm {
         margin-bottom: 0px;
