--- a/src/app/blog/components/blog/page.module.css
+++ b/src/app/blog/components/blog/page.module.css
@@ -73,6 +73,35 @@
 
 .userListContainer {
     justify-content: space-between;
+    align-items: center;
+    padding: 7px;
+    border-radius: 7px;
+    transition: 0.5s;
+}
+
+.userListContainer:hover {
+    background-color: var(--app-light-background-color);
+}
+
+.userListContainer > img {
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.userListContainer > p {
+    flex-grow: 1;
+}
+
+.userListContainer > svg {
+    background-color: hsl(123, 91%, 35%);
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.userListContainer > svg:active {
+    transform: scale(0.9);
 }
 
 @media screen and (max-width: 500px) {
