--- a/src/app/blog/organization/create/components/page.module.css
+++ b/src/app/blog/organization/create/components/page.module.css
@@ -30,7 +30,7 @@
 
 
 .userAddingSection {
-    max-width: 700px;
+    max-width: 1200px;
     width: 100%;
     align-items: center;
     max-height: 700px;
@@ -39,25 +39,42 @@
 }
 
 .userAddingForm {
-    width: 80%;
+    width: 60%;
     height: 100%;
     border-right: 1px solid var(--app-light-background-color);
+    padding: 10px;
 }
 
-.userAddingForm > div {
+.userAddingForm > div, .addedUserPreview > div {
     height: 100%;
     overflow-y: scroll;
+    align-items: center;
 }
 
 .userAddingForm > label {
-    margin: 5px 5px 0px 5px;
+    margin: 5px 5px 10px 5px;
 }
 
 .addedUserPreview {
-    width: 20%;
+    width: 40%;
     height: 100%;
-    min-width: 250px;
-    overflow-y: scroll;
+    padding: 10px;
+}
+
+.addedUserPreview > h2 {
+    margin-bottom: 10px;
+}
+
+.noUsersImage {
+    width: 400px;
+    background-size: contain;
+    object-fit: cover;
+}
+
+@media screen and (max-width: 900px) {
+    .noUsersImage {
+        width: 300px;
+    }
 }
 
 @media screen and (max-width: 710px) {
@@ -70,14 +87,15 @@
         border-right: none;
         border-bottom: 1px solid var(--app-light-background-color);
         height: 49%;
+        width: 100%;
     }
     .addedUserPreview {
         width: 100%;
         height: 49%;
     }
-    .userAddingForm {
-        width: 100%;
-        height: calc(100% - 40px);
+
+    .noUsersImage {
+        width: 300px;
     }
 }
 
@@ -92,5 +110,11 @@
         display: block;
         width: 100%;
         max-width: 450px;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .noUsersImage {
+        width: 200px;
     }
 }
