--- a/src/app/blog/organization/list/components/page.module.css
+++ b/src/app/blog/organization/list/components/page.module.css
@@ -18,6 +18,8 @@
     cursor: pointer;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
+    text-decoration: none;
+    color: var(--app-text-color);
 }
 
 .organizationComp > img {
