--- a/src/app/blog/organization/edit/[id]/components/page.module.css
+++ b/src/app/blog/organization/edit/[id]/components/page.module.css
@@ -2,3 +2,19 @@
 .editLayout {
     
 }
+
+.navBar {
+ padding: 10px 0px;
+}
+
+.navLink {
+    text-decoration: none;
+    color: var(--app-text-color);
+    padding: 7px;
+    border-radius: 7px;
+}
+
+.activeNavLink {
+    color: var(--app-selected-text-color);
+    background-color: var(--app-selected-background-color);
+}
