--- a/src/app/blog/components/form/page.module.css
+++ b/src/app/blog/components/form/page.module.css
@@ -67,7 +67,7 @@
     color: transparent;
 }
 
-.checkbox input[type="checkbox"], .radio input[type="radio"] {
+.checkbox input[type="checkbox"], .radio input[type="radio"], .imageInput > input[type="file"] {
     display: none;
 }
 
@@ -103,4 +103,19 @@
 .radioGroup .radio {
     flex-shrink: 0;
     margin-right: 10px;
+}
+
+.imageInput {
+    width: 100%;
+}
+
+.imageInput > label {
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.imageInput img {
+    width: 100%;
+    height: 100%;
 }
