--- a/src/app/blog/organization/edit/[id]/general/page.module.css
+++ b/src/app/blog/organization/edit/[id]/general/page.module.css
@@ -9,3 +9,22 @@
 .generalEditForm > label, .generalEditForm input, .generalEditForm textarea {
     width: 100%;
 }
+
+.header {
+    align-items: center;
+    padding: 5px 0px;
+}
+.header > a {
+    display: inline-block;
+    font-size: 25px;
+    border-right: 2px solid rgba(0, 0, 0, 0.2);
+    padding: 0px 5px;
+    margin-right: 5px;
+    text-decoration: none;
+    color: var(--app-text-color);
+}
+
+.page > form {
+    height: calc(100% - 40px);
+    overflow-y: scroll;
+}
