--- a/src/app/blog/components/form/page.module.css
+++ b/src/app/blog/components/form/page.module.css
@@ -114,8 +114,32 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    position: relative;
+    cursor: pointer;
 }
 .imageInput img {
     width: 100%;
     height: 100%;
+}
+
+.cameraWrapper {
+    border-radius: 100%;
+    background-color: hsla(60, 3%, 6%, 0.753);
+    opacity: 0;
+}
+
+.imageInput img, .cameraWrapper {
+    position: absolute;
+}
+
+.cameraWrapper {
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 25px;
+    transition: 0.5s;
+}
+
+.imageInput > label:hover .cameraWrapper {
+    opacity: 1;
 }
