Finished edit feature for general info of a organization

--- a/src/app/blog/organization/edit/[id]/general/page.module.css
+++ b/src/app/blog/organization/edit/[id]/general/page.module.css
@@ -28,3 +28,11 @@
     height: calc(100% - 40px);
     overflow-y: scroll;
 }
+
+.page > form > button {
+    width: fit-content;
+    background-color: var(--app-selected-background-color);
+    color: var(--app-selected-text-color);
+    padding: 5px 10px;
+    font-size: 18px;
+}
