--- a/src/app/blog/organization/edit/[id]/members/orguser.module.css
+++ b/src/app/blog/organization/edit/[id]/members/orguser.module.css
@@ -38,3 +38,13 @@
     list-style-type: none;
 }
 
+.userRole > ul > li > span {
+    margin-right: 5px;
+    color: hsl(128, 78%, 44%);
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    font-size: 16px;
+    text-align: center;
+}
