Added user adding popup

--- a/src/app/blog/organization/edit/[id]/members/page.module.css
+++ b/src/app/blog/organization/edit/[id]/members/page.module.css
@@ -18,3 +18,13 @@
     height: calc(100% - 40px);
     justify-content: center;
 }
+
+.membersEditPage {
+    position: relative;
+    height: calc(100% - 40px);
+}
+
+.orgMembersListContainer {
+    position: absolute;
+    height: calc(100% - 40px);
+}
