--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -10,6 +10,7 @@
     height: 100%;
     width: calc(100% - 200px);
     --app-main-body-background-color: var(--app-background-color);
+    justify-content: center;
 }
 
 @media screen and (max-width: 1000px) {
