--- a/src/app/blog/organization/[id]/settings/edit/page.module.css
+++ b/src/app/blog/organization/[id]/settings/edit/page.module.css
@@ -21,14 +21,11 @@
     background-color: var(--app-selected-background-color);
     color: var(--app-selected-text-color);
     padding: 5px 10px;
-    font-size: 18px;
+    font-size: 20px;
+    width: 200px;
 }
 
 .generalEditForm > div:first-child {
     display: flex;
     justify-content: center;
-}
-
-.page > button {
-    /* le */
 }
