Added input elements in blog compose page

--- a/src/app/blog/compose/compose.module.css
+++ b/src/app/blog/compose/compose.module.css
@@ -4,6 +4,7 @@
     width: 95%;
     height: 90%;
     padding-top: var(--app-main-page-padding-top);
+    overflow-y: scroll;
 }
 
 .editorWrapper {
