--- a/src/app/blog/components/blog/page.module.css
+++ b/src/app/blog/components/blog/page.module.css
@@ -2,6 +2,7 @@
 .blogMeta {
     border-bottom: 1px solid hsl(17, 5%, 71%);
     max-width: 700px;
+    width: 95%;
     height: 245px;
     padding: 10px;
 }
