Added more action option

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   --app-background-color: white;
   --app-light-background-color: hsl(0, 4%, 86%);
   --app-selected-background-color: hsl(206, 93%, 52%);
+  --app-warning-background-color: red;
 
   --app-text-color: black;
   --app-light-text-color: hsl(15, 2%, 51%);
