--- a/src/app/blog/stories/page.module.css
+++ b/src/app/blog/stories/page.module.css
@@ -7,6 +7,10 @@
     align-items: center;
 }
 
+.storiesContainer > article {
+    margin-bottom: 20px;
+}
+
 @media screen and (max-width: 500px) {
     
     .storiesContainer {
