profile page and build error fix

--- a/src/app/blog/settings/components/navbar.module.css
+++ b/src/app/blog/settings/components/navbar.module.css
@@ -1,8 +1,9 @@
 
 .navBar {
-    padding: 10px 0px;
+    padding: 10px 5px;
     max-width: 150px;
     width: 100%;
+    border-right: 1px solid var(--app-light-background-color);
 }
 
 .navBar > li {
@@ -26,13 +27,18 @@
 @media screen and (max-width: 500px) {
     
     .navBar {
+        padding: 10px 0px;
         flex-direction: row;
         max-width: none;
+        border-right: none;
+        border-bottom: 1px solid var(--app-light-background-color);
+        overflow-x: scroll;
     }
     .navLink {
         display: inline-block;
     }
     .navBar > li {
         width: auto;
+        margin-right: 5px;
     }
 }
