--- a/src/app/blog/settings/profile/profile.module.css
+++ b/src/app/blog/settings/profile/profile.module.css
@@ -8,3 +8,11 @@
     display: flex;
     justify-content: center;
 }
+.profileForm > button {
+    background-color: var(--app-selected-background-color);
+    color: var(--app-selected-text-color);
+}
+
+.profileForm > label, .profileForm > label > input, .profileForm > label > textarea {
+    width: 100%;
+}
