--- a/src/app/blog/organization/components/page.module.css
+++ b/src/app/blog/organization/components/page.module.css
@@ -34,6 +34,11 @@
     color: var(--app-text-color);
 }
 
+.organizationComp > span {
+    color: red;
+    margin-right: 5px;
+}
+
 .organizationCompNameDesc {
     flex-grow: 1;
 }
