--- a/src/app/blog/organization/components/page.module.css
+++ b/src/app/blog/organization/components/page.module.css
@@ -51,3 +51,24 @@
 .organizaitonListingPage {
     height: 100%;
 }
+
+.skeletonImage {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--app-light-background-color);
+    margin-right: 5px;
+}
+
+.skeleton h3 {
+    background-color: var(--app-light-background-color);
+    margin-bottom: 5px;
+    width: 20%;
+    height: 10px;
+}
+
+.skeleton p {
+    background-color: var(--app-light-background-color);
+    width: 60%;
+    height: 25px;
+}
