--- a/src/app/blog/[profileId]/comp/banner.module.css
+++ b/src/app/blog/[profileId]/comp/banner.module.css
@@ -26,7 +26,7 @@
     width: 70%;
 }
 
-.banner > button {
+.followButton {
     background-color: var(--app-selected-background-color);
     color: var(--app-selected-text-color);
     position: absolute;
@@ -34,4 +34,9 @@
     right: 40px;
     font-size: 20px;
     font-weight: 800;
+}
+
+.unFollow {
+    background-color: red;
+    color: white;
 }
