Added unpublish option and fixed some bug

--- a/src/app/blog/components/publishBlog.module.css
+++ b/src/app/blog/components/publishBlog.module.css
@@ -3,6 +3,11 @@
     color: white;
 }
 
+.unPublishButton {
+    background-color: red;
+    color: white;
+}
+
 .publishModal {
     position: fixed;
     display: none;
