--- a/src/app/blog/[profileId]/[id]/components/blogComment.module.css
+++ b/src/app/blog/[profileId]/[id]/components/blogComment.module.css
@@ -1,4 +1,7 @@
 
+.commentContainer {
+    align-items: flex-end;
+}
 .comment {
     padding: 5px;
     justify-content: space-between;
@@ -23,4 +26,19 @@
 }
 .commentFooter {
     padding: 10px 0px;
+}
+.repliesButton {
+    align-items: center;
+    padding: 0px 10px;
+    cursor: pointer;
+}
+.repliesButton > p {
+    margin-left: 5px;
+}
+
+.repliesContainer {
+    position: absolute;
+    top: 100%;
+    right: 0px;
+    left: 0px;
 }
