--- a/src/app/blog/home/page.module.css
+++ b/src/app/blog/home/page.module.css
@@ -1,7 +1,8 @@
 .home {
-    justify-content: center;
+  justify-content: center;
+  padding-top: var(--app-main-page-padding-top);
 }
 .blogListing {
-    max-width: 700px;
-    width: 100%;
+  max-width: 700px;
+  width: 100%;
 }
