--- a/src/app/(blog)/components/form/dropDown.module.css
+++ b/src/app/(blog)/components/form/dropDown.module.css
@@ -16,7 +16,7 @@
     margin-right: 5px;
 }
 
-.dropDown {
+.dropDownLeft {
     min-width: 200px;
     scale: 0;
     transition: 0.5s;
@@ -27,18 +27,30 @@
     background-color: var(--app-background-color);
 }
 
+.dropDownRight {
+    min-width: 200px;
+    scale: 0;
+    transition: 0.5s;
+    transform-origin: top right;
+    border: 1px solid var(--app-light-background-color);
+    position: absolute;
+    top: 100%;
+    right: 0px;
+    background-color: var(--app-background-color);
+}
+
 .showDropDown {
     scale: 1;
 }
 
-.dropDown > li {
+.dropDownRight > li, .dropDownLeft > li {
     list-style-type: none;
     padding: 10px;
     border-bottom: 1px solid var(--app-light-background-color);
     cursor: pointer;
 }
 
-.dropDown > li:hover {
+.dropDownRight > li:hover, .dropDownLeft > li:hover {
     background-color: var(--app-light-background-color);
     transition: 0.5s;
 }
