--- a/src/app/(blog)/[profileId]/[id]/components/blogUser.module.css
+++ b/src/app/(blog)/[profileId]/[id]/components/blogUser.module.css
@@ -14,7 +14,7 @@
     padding: 0px 10px;
 }
 
-.nameAndPostedTime > h4 {
+.nameAndPostedTime > a > h4 {
     margin-bottom: 5px;
     font-size: 16px;
 }
